# AvalonMT

./: .gitignore  CMakeLists.txt  README.md  asicdevice.cpp  asicdevice.h  asicdevicemenu.cpp  asicdevicemenu.h  asicdevicemenu.ui  asictablewidget.cpp  asictablewidget.h  avalonmt.qrc  logger.cpp  logger.hpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scannerwindow.cpp  scannerwindow.h  scannerwindow.ui
